# rustls-bench-results

./: README.md  notebook.ipynb  pyproject.toml
data/aws-lc-bench-results/: aws-lc_1.17.4_output
data/aws-lc-throughput/: openssl_3.1.4_output
data/memory/: openssl_3.2.0_gcc  rustls_0.22.0_aws-lc_gcc_jemalloc
data/openssl_3.1.4_gcc/: output_11  output_12  output_13  output_14  output_15  output_16  output_17  output_18  output_19  output_20  output_21  output_22  output_23  output_27  output_3  output_4  output_6  output_9
data/openssl_3.2.0_clang/: output_1  output_10  output_11  output_12  output_15  output_16  output_17  output_18  output_2  output_20  output_21  output_24  output_25  output_26  output_27  output_3  output_5  output_7  output_8
data/openssl_3.2.0_gcc/: output_13  output_14  output_15  output_16  output_18  output_21  output_22  output_24  output_25  output_29  output_30  output_6  output_8  output_9
data/rustls_0.22.0_aws-lc_clang_jemalloc/: output_10  output_11  output_12  output_13  output_14  output_15  output_16  output_19  output_2  output_20  output_21  output_23  output_24  output_30  output_4  output_6  output_8  output_9
data/rustls_0.22.0_aws-lc_gcc_jemalloc/: output_1  output_10  output_11  output_15  output_16  output_17  output_19  output_20  output_23  output_26  output_5  output_7  output_9
data/rustls_0.22.0_aws-lc_gcc_malloc/: output_1  output_11  output_12  output_16  output_17  output_20  output_23  output_24  output_28  output_3  output_4  output_7  output_8  output_9
data/rustls_0.22.0_ring_clang_malloc/: output_1  (+13 more)
(+250 files in other folders)
