[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Adolfo Ochagavía <github@adolfo.ochagavia.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
